--- a/project-ex03/public/index.html
+++ b/project-ex03/public/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+cd <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
 <title>Hello World</title>
 </head>
 <body>
     <div id='root'></div>
-    <script src='index.js'></script>
     <script src='App.js'></script>
+    <script src='index.js'></script>
 </body>
