--- a/project-ex05/public/index.html
+++ b/project-ex05/public/index.html
@@ -5,5 +5,5 @@
 </head>
 <body>
     <div id='root'></div>
-    <script tpye="module" src='bundle.js'></script>
+    <script src='bundle.js'></script>
 </body>
