--- a/project-ex13/public/index.html
+++ b/project-ex13/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
-<title>Hello World</title>
+<title>Greeter</title>
 </head>
 <body>
     <div id='root'></div>
     <script src='bundle.js'></script>
-</body>
+</body> 
